--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hex Wars</title>
 	<link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-	<div id="app">
-		<div class="grid">
+	<div id="app" v-cloak>
+		<div id="hover-display-container">
+			<div id="hover-display" v-if="activeHex" :set="h = activeHex" :foo="u = activeUser">
+				<div>({{ h.q }}, {{ h.r }}, {{ h.s }})</div>
+				<div>Development: {{ h.points }} points</div>
+				<div>
+					Owner:
+					<span v-if="u">{{ u.username }} ({{ u.points }} points)</span>
+					<span v-else>None</span>
+				</div>
+				<!-- <div>House: Bar (Y points)</div> -->
+			</div>
+		</div>
+
+		<div id="hex-grid" :style="gridStyle">
 			<div
-				class="hexagon"
-				v-for="(hexagon, key) in hexagons"
+				class="hex"
+				v-for="(hex, key) in hexes"
+				@mouseover="hoverHex(hex)"
+				@mouseleave="unhoverHex"
+				@click="clickHex(hex)"
+				:style="hex.style"
 				:key="key"
-				:style="styleHexagon(hexagon)"
 			>
+				<!-- Empty -->
 			</div>
 		</div>
 	</div>
