--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
 	<title>Hex Wars</title>
 	<link rel="stylesheet" href="./style.css" />
+	<script src="https://kit.fontawesome.com/1fae8ff10e.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<div id="app" v-cloak>
-		<div id="hover-display-container">
-			<div id="hover-display" v-if="activeHex" :set="h = activeHex" :foo="u = activeUser">
+		<div id="hover-menu-container">
+			<div
+				id="hover-menu"
+				v-if="activeHex"
+				:set-h="h = activeHex"
+				:set-u="u = activeUser"
+			>
 				<div>({{ h.q }}, {{ h.r }}, {{ h.s }})</div>
 				<div>Development: {{ h.points }} points</div>
 				<div>
@@ -23,13 +29,21 @@
 			<div
 				class="hex"
 				v-for="(hex, key) in hexes"
-				@mouseover="hoverHex(hex)"
+				@mouseenter="hoverHex(hex)"
 				@mouseleave="unhoverHex"
 				@click="clickHex(hex)"
 				:style="hex.style"
 				:key="key"
 			>
 				<!-- Empty -->
+			</div>
+
+			<div id="click-menu" :style="clickMenuStyle">
+				<div id="center"><i class="fa fa-circle-info"></i></div>
+				<div id="top-right"><i class="fa-solid fa-user"></i></i></div>
+				<div id="bottom-right"><i class="fa-solid fa-envelope"></i></div>
+				<div id="top-left"><i class="fa-solid fa-skull-crossbones"></i></div>
+				<div id="bottom-left"><i class="fa-solid fa-shield"></i></div>
 			</div>
 		</div>
 	</div>
